# premiumy_tt

./: .gitignore  README.md  config.py  email_manager.py  main.py  pyproject.toml  test_proxy.py  test_selenium.py  test_seleniumwire.py
proxies/: Webshare 10 proxies.txt  proxyscrape_premium_http_proxies.txt
