[project]
name = "premiumy-tt"
version = "0.1.0"
description = ""
authors = [
    {name = "Constantine Zagorodnyi",email = "constantine2903@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests[socks] (>=2.32.3,<3.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "faker (>=36.1.1,<37.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "pyopenssl (>=25.0.0,<26.0.0)",
    "blinker (==1.7.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "2captcha-python (>=1.5.1,<2.0.0)",
    "speechrecognition (>=3.14.1,<4.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "chromedriver-autoinstaller (>=0.6.4,<0.7.0)",
    "twocaptcha-extension-python (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
